--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,15 @@
-version: '2'
+version: '3.8'
 services:
-  php:
-    image: yiisoftware/yii2-php:7.4-apache
-    volumes:
-      - ~/.composer-docker/cache:/root/.composer/cache:delegated
-      - ./:/app:delegated
-    ports:
-      - '8000:80'
+  app:
+    image: ${DOCKER_REGISTRY:-ghcr.io}/${GITHUB_REPOSITORY:-user/yii2-app}:latest
+    deploy:
+      replicas: 2
+      restart_policy:
+        condition: on-failure
+    environment:
+      - YII_ENV=prod
+    networks:
+      - app-network
+networks:
+  app-network:
+    driver: overlay
