--- a/nginx/yii2-app.conf
+++ b/nginx/yii2-app.conf
@@ -1,27 +1,22 @@
-server { listen 80; server_name _; # Default server, accepts all requests
-# Proxy requests to the Docker Swarm service (Yii2 app on port 8080)
-location / {
-    proxy_pass http://127.0.0.1:8080;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
+server {
+    listen 80;
+    server_name _;
+    root /opt/yii2-app/web;
+    index index.php;
 
-    # Ensure proper handling of WebSocket upgrades (if needed)
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-}
+    location / {
+        try_files $uri $uri/ /index.php?$args;
+    }
 
-# Serve static files directly (e.g., Yii2 assets)
-location ~* \.(jpg|jpeg|png|gif|ico|css|js|woff|woff2|ttf|svg|eot|pdf)$ {
-    root /var/www/html/web; # Adjust to your Yii2 app's web directory if needed
-    expires max;
-    log_not_found off;
-}
+    location ~ \.php$ {
+        include fastcgi_params;
+        fastcgi_pass yii2_web:9000;  # Matches Docker service name in docker-compose.yml
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
 
-# Error and access logs
-error_log /var/log/nginx/yii2-error.log;
-access_log /var/log/nginx/yii2-access.log;
-
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
+        expires max;
+        log_not_found off;
+    }
 }
