--- a/ansible/files/nginx/yii2-app.conf
+++ b/ansible/files/nginx/yii2-app.conf
@@ -10,7 +10,7 @@ server {
 
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass 127.0.0.1:9000;  # Matches docker-compose.yml service
+        fastcgi_pass yii2_web:9000;  # Matches docker-compose.yml service
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
