--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -7,6 +7,7 @@
     nginx_conf_path: /etc/nginx/sites-available/yii2-app
     repo_url: "https://github.com/jitenderlunavath/yii2-docker-ci-cd-ansible.git"
     app_dir: /opt/yii2-app
+    venv_dir: /opt/ansible-venv
 
   tasks:
     - name: Update apt cache
@@ -22,7 +23,21 @@
           - git
           - python3-pip
           - python3-docker
+          - python3-venv  # Required for virtualenv
         state: present
+
+    - name: Create virtual environment
+      command: python3 -m venv {{ venv_dir }}
+      args:
+        creates: "{{ venv_dir }}/bin/activate"
+
+    - name: Install jsondiff and python-docker in virtual environment
+      pip:
+        name:
+          - jsondiff
+          - docker  # Ensure python-docker is available
+        state: present
+        virtualenv: "{{ venv_dir }}"
 
     - name: Start and enable Docker
       service:
@@ -47,6 +62,7 @@
         dest: "{{ app_dir }}"
         version: main
         accept_hostkey: yes
+        force: yes
 
     - name: Verify docker-compose.yml exists
       stat:
@@ -60,7 +76,7 @@
 
     - name: Copy NGINX configuration
       copy:
-        src: nginx/yii2-app.conf
+        src: /home/jitender/yii2-app/nginx/yii2-app.conf
         dest: "{{ nginx_conf_path }}"
         owner: root
         group: root
@@ -87,3 +103,7 @@
         name: yii2
         compose: "{{ app_dir }}/docker-compose.yml"
         state: present
+      environment:
+        PYTHONPATH: "{{ venv_dir }}/lib/python3.12/site-packages"
+      vars:
+        ansible_python_interpreter: "{{ venv_dir }}/bin/python3"
