--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -23,7 +23,9 @@
           - git
           - python3-pip
           - python3-docker
-          - python3-venv  # Required for virtualenv
+          - python3-venv
+          - php-cli  # Required for Composer
+          - unzip    # Required for Composer
         state: present
 
     - name: Create virtual environment
@@ -35,7 +37,7 @@
       pip:
         name:
           - jsondiff
-          - docker  # Ensure python-docker is available
+          - docker
         state: present
         virtualenv: "{{ venv_dir }}"
 
@@ -63,6 +65,24 @@
         version: main
         accept_hostkey: yes
         force: yes
+
+    - name: Install Composer
+      get_url:
+        url: https://getcomposer.org/installer
+        dest: /tmp/composer-setup.php
+        mode: '0755'
+
+    - name: Run Composer installer
+      command: php /tmp/composer-setup.php --install-dir=/usr/local/bin --filename=composer
+      args:
+        creates: /usr/local/bin/composer
+
+    - name: Run composer install in app directory
+      command: composer install --no-dev --optimize-autoloader
+      args:
+        chdir: "{{ app_dir }}"
+      environment:
+        COMPOSER_HOME: /root/.composer
 
     - name: Verify docker-compose.yml exists
       stat:
