--- a/nginx/yii2-app.conf
+++ b/nginx/yii2-app.conf
@@ -1,7 +1,8 @@
 server {
     listen 80;
     server_name _;
-    root /opt/yii2-app/web;
+
+    root /app/web;
     index index.php;
 
     location / {
@@ -10,7 +11,7 @@ server {
 
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass 127.0.0.1:9000;  # Matches docker-compose.yml service
+        fastcgi_pass yii2_web:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
