--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,28 @@
 version: '3.8'
 services:
   yii2_web:
-    image: yiisoftware/yii2-php:7.4-apache
-    ports:
-      - "80:80"
-      - "9000:9000"  # Expose PHP-FPM port
+    image: php:7.4-fpm
     volumes:
       - /opt/yii2-app:/app
     environment:
       - YII_ENV=prod
     deploy:
       replicas: 2
+      restart_policy:
+        condition: on-failure
+    networks:
+      - app-network
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - /opt/yii2-app:/app
+      - /opt/yii2-app/nginx/yii2-app.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - yii2_web
+    deploy:
+      replicas: 1
       restart_policy:
         condition: on-failure
     networks:
