--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -21,6 +21,7 @@
             - unzip
             - python3-pip
             - python3-apt
+            - python3-docker  # Install Python Docker SDK
             - php-curl
             - php-mysql
             - php-xml
@@ -46,11 +47,6 @@
           name: ubuntu
           groups: docker
           append: yes
-
-      - name: Install Python Docker SDK
-        ansible.builtin.pip:
-          name: docker
-          state: present
 
       - name: Install Composer
         ansible.builtin.shell: |
