--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -5,6 +5,7 @@
     vars:
       app_dir: /opt/yii2-app
       repo_url: "https://github.com/jitenderlunavath/yii2-docker-ci-cd-ansible.git"
+      venv_dir: /opt/ansible-venv
 
     tasks:
       - name: Update apt package index
@@ -21,7 +22,8 @@
             - unzip
             - python3-pip
             - python3-apt
-            - python3-docker  # Install Python Docker SDK
+            - python3-docker
+            - python3-venv
             - php-curl
             - php-mysql
             - php-xml
@@ -47,6 +49,18 @@
           name: ubuntu
           groups: docker
           append: yes
+
+      - name: Create Python virtual environment
+        ansible.builtin.command:
+          cmd: python3 -m venv {{ venv_dir }}
+          creates: "{{ venv_dir }}/bin/activate"
+
+      - name: Install jsondiff in virtual environment
+        ansible.builtin.pip:
+          name: jsondiff
+          state: present
+          virtualenv: "{{ venv_dir }}"
+          virtualenv_python: python3
 
       - name: Install Composer
         ansible.builtin.shell: |
