--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,45 @@
-version: '3.8'
-services:
-  yii2_web:
-    image: php:7.4-fpm
-    volumes:
-      - /opt/yii2-app:/app
-    environment:
-      - YII_ENV=prod
-    deploy:
-      replicas: 2
-      restart_policy:
-        condition: on-failure
-    networks:
-      - app-network
-  nginx:
-    image: nginx:latest
-    ports:
-      - "80:80"
-    volumes:
-      - /opt/yii2-app:/app
-      - /opt/yii2-app/nginx/yii2-app.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - yii2_web
-    deploy:
-      replicas: 1
-      restart_policy:
-        condition: on-failure
-    networks:
-      - app-network
-  db:
-    image: mysql:8.0
-    environment:
-      - MYSQL_ROOT_PASSWORD=secret
-      - MYSQL_DATABASE=yii2
-    volumes:
-      - db-data:/var/lib/mysql
-    networks:
-      - app-network
-networks:
-  app-network:
-    driver: overlay
-volumes:
-  db-data:
+Kversion: '3.8'
+  services:
+    yii2_web:
+      build:
+        context: .
+        dockerfile: Dockerfile
+      volumes:
+        - /opt/yii2-app:/app
+      environment:
+        - YII_ENV=prod
+      deploy:
+        replicas: 2
+        restart_policy:
+          condition: on-failure
+      networks:
+        - app-network
+    nginx:
+      image: nginx:latest
+      ports:
+        - "80:80"
+      volumes:
+        - /opt/yii2-app:/app
+        - /opt/yii2-app/nginx/yii2-app.conf:/etc/nginx/conf.d/default.conf
+      depends_on:
+        - yii2_web
+      deploy:
+        replicas: 1
+        restart_policy:
+          condition: on-failure
+      networks:
+        - app-network
+    db:
+      image: mysql:8.0
+      environment:
+        - MYSQL_ROOT_PASSWORD=secret
+        - MYSQL_DATABASE=yii2
+      volumes:
+        - db-data:/var/lib/mysql
+      networks:
+        - app-network
+  networks:
+    app-network:
+      driver: overlay
+  volumes:
+    db-data:
